--- a/app/client/main.html
+++ b/app/client/main.html
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <link rel="shortcut icon" href="/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>HGIA</title>
+  <title>meteor-application-template</title>
 </head>
 
 <body>
